--- a/DeckSorterWebApp/src/app/app.component.css
+++ b/DeckSorterWebApp/src/app/app.component.css
@@ -5,10 +5,10 @@ span{
 }
 
 .user-label{
-margin-right: 25px;;
+margin-right: 25px;
 }
 .title-label{
-    margin-left: 25px;;
+    margin-left: 43%;
     font-size: x-large;
     }
 footer {
