--- a/DeckSorterWebApp/src/styles.css
+++ b/DeckSorterWebApp/src/styles.css
@@ -16,7 +16,7 @@ p{
     padding: 40px;
     width: 70vw;
     min-height: 50vh;
-    background-color: #313131;
+    /* background-color: #313131; */
     font-size: 20px;
 }
 
