--- a/DeckSorterWebApp/src/app/card-input/card-input.component.html
+++ b/DeckSorterWebApp/src/app/card-input/card-input.component.html
@@ -28,7 +28,7 @@
                 <span style="color: #5dff71;"> Successfull! Deck is sorted. </span>
                 <div class="card-result-container">
                     <div class="result">
-                        <div class="card-element" *ngFor="let sortedCard  of sortedCards">
+                        <div class="card-element result-card" *ngFor="let sortedCard  of sortedCards">
     
                             <span> {{sortedCard}}</span>
                         </div>
