--- a/DeckSorterWebApp/src/app/card-input/card-input.component.html
+++ b/DeckSorterWebApp/src/app/card-input/card-input.component.html
@@ -42,7 +42,7 @@
                 <span style="color: red;"> Looks like there is some error. </span>
                 <div class="card-result-container">
                     <div class="result">
-                        <span style="color: rgb(245, 23, 23);"> {{errorMessage}}</span>
+                        <span > {{errorMessage}}</span>
     
                     </div>
                 </div>
