test commit after default branch change

--- a/DeckSorterWebApp/src/app/components/card/card.component.html
+++ b/DeckSorterWebApp/src/app/components/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="loading" *ngIf="isLoading"> Loading</div>
 <div class="card-holder">
     <div class="card-inner-holder">
-<span > Insructions: </span> <span style="font-size: small;">cards should be entered as 'first letter(Capital letters) of Rank followed by first letter(small letter) of Suit Eg: '2d' for Two of Diamonds </span>
+<span style="color: yellow;"> Insructions: </span> <span style="font-size: small;">cards should be entered as 'first letter(Capital letters) of Rank followed by first letter(small letter) of Suit Eg: '2d' for Two of Diamonds </span>
 
         <div class="card-input-container">
             <div style="padding-top: 3%;">   
